--- a/src/bancoadt/conection/config.properties
+++ b/src/bancoadt/conection/config.properties
@@ -1,5 +1,5 @@
-DB=banco
-Conn=jdbc:mysql://localhost:3306/banco
+DB=bank
+Conn=jdbc:mysql://localhost:3306/bank
 DBUser=root
 DBPass=abcd*1234
 Driver=com.mysql.jdbc.Driver
